--- a/app/views/lobbyView.html
+++ b/app/views/lobbyView.html
@@ -1,4 +1,10 @@
-<div class="row">
+<div class="row" ng-show="showLoadingScreen">
+    <div class="well">
+        <p style="text-align: center">Waiting for second player</p>
+        <p style="text-align: center"><img src="/images/ajax-loader.gif" /></p>
+    </div>
+</div>
+<div class="row" ng-hide="showLoadingScreen">
     <div class="col-sm-8">
         <div id="lobbyBoardMain">
             <table class="boardTable">
@@ -26,7 +32,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row" ng-hide="showLoadingScreen">
     <div class="col-xs-12">
         <button class="btn btn-primary"  ng-click="joinGame()">join game</button>
     </div>
