added "try again" button to error view

--- a/app/views/serverNotFoundView.html
+++ b/app/views/serverNotFoundView.html
@@ -1,3 +1,4 @@
 <div class="alert alert-danger">
-    <strong>Couldn't establish a connection with the signalR server. </strong> Ensure the server is running on the configured port and try again.
+    <strong>Couldn't establish a connection with the signalR server. </strong> Ensure the server is running on the configured port and
+    <a href="/">try again</a>.
 </div>
