--- a/app/views/lobbyView.html
+++ b/app/views/lobbyView.html
@@ -1,25 +1,35 @@
+
 <div class="row" loading-screen-modal="showLoadingScreen">
     <div class="col-sm-8">
-        <div id="lobbyBoardMain">
-            <table class="boardTable">
-                <tr>
-                    <td class="boardHeader"></td><td ng-repeat="x in [1,2,3,4,5,6,7,8,9,10]" class="boardHeader">{{x}}</td>
-                </tr>
-                <tr ng-repeat="(y, row) in board">
-                    <td ng-bind="['A','B','C','D','E','F','G','H','I','J'][y]" class="boardHeader"></td>
-                    <td ng-repeat="(x, fieldValue) in row" class="boardField">
-                        <div class="fieldDiv"
-                             ng-class="{ship: fieldValue > 0, selected: fieldValue < 0}"
-                             ng-click="select(x, y)"></div>
-                    </td>
-                </tr>
-            </table>
+        <div class="boardContainer">
+            <div class="dummy"></div>
+            <div class="board">
+                <table class="boardTable">
+                    <tr>
+                        <td></td><td class="boardH" ng-repeat="x in [1,2,3,4,5,6,7,8,9,10]">{{x}}</td>
+                    </tr>
+                    <tr ng-repeat="(y, row) in board">
+                        <td ng-bind="['A','B','C','D','E','F','G','H','I','J'][y]"></td>
+                        <td ng-repeat="(x, fieldValue) in row" class="boardF"
+                            ng-class="{ship: fieldValue > 0, selected: fieldValue < 0}"
+                            ng-click="select(x, y)">
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div id="lobbyBoardRight">
+    </div>
+    <div class="col-sm-4">
+        <div id="shipCounter">
             <div ng-repeat="shipLength in availableShips">
                 <span ng-repeat="slot in range(shipLength)"></span>
             </div>
         </div>
+    </div>
+</div>
+<div class="row" >
+    <div class="col-sm-8">
+
         <div id="lobbyBoardBottom">
             <button class="btn btn-default btn-sm" ng-click="randomShips()">random</button>
             <button class="btn btn-default btn-sm" ng-click="resetShips()">reset</button>
