added basic element

--- a/app/views/lobbyView.html
+++ b/app/views/lobbyView.html
@@ -27,6 +27,11 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-sm-8">
+        <game-board></game-board>
+    </div>
+</div>
 <div class="row" >
     <div class="col-sm-8">
 
