--- a/app/components/game-board.html
+++ b/app/components/game-board.html
@@ -40,7 +40,7 @@
                 width: 100%;
                 height: 100%;
             }
-            .boardTable .ship {
+            .boardTable .state4 {
                 background-color: #808080;
                 border: 1px solid #808080;
             }
@@ -54,7 +54,7 @@
                 background-color: darkred;
                 border: 1px solid darkred;
             }
-            .boardTable .selected {
+            .boardTable .state5 {
                 background-color: yellow;
             }
             .fieldDiv:not(.ship):hover {
@@ -75,7 +75,7 @@
                         <tr>
                             <td>{{row}}</td>
                             <template repeat="{{column, columnIndex in columns}}">
-                                <td class="boardF {{ {ship: parsedData[rowIndex][columnIndex] == 4, selected: parsedData[rowIndex][columnIndex] == 5 } | tokenList }}"
+                                <td class="boardF state{{parsedData[rowIndex][columnIndex]}}"
                                     on-Click="{{ onFieldClicked }}"
                                     data-X="{{columnIndex}}"
                                     data-Y="{{rowIndex}}"></td>
