--- a/app/views/gameView.html
+++ b/app/views/gameView.html
@@ -11,23 +11,6 @@
     </div>
     <div class="col-sm-6">
         <p>you:</p>
-
-        <div class="boardContainer">
-            <div class="dummy"></div>
-            <div class="board">
-                <table class="boardTable">
-                    <tr>
-                        <td></td>
-                        <td class="boardH" ng-repeat="x in [1,2,3,4,5,6,7,8,9,10]">{{x}}</td>
-                    </tr>
-                    <tr ng-repeat="(y, row) in player.Board">
-                        <td ng-bind="['A','B','C','D','E','F','G','H','I','J'][y]"></td>
-                        <td ng-repeat="(x, fieldValue) in row" class="boardF"
-                            ng-class="{empty: fieldValue==1, hit: fieldValue==2, sunk: fieldValue==3}">
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+        <game-board data="{{player.Board}}"></game-board>
     </div>
 </div>
